[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pywrk"
description = "Python binding for wrk"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Nguyen Khac Thanh", email = "nguyenkhacthanh244@gmail.com" },
]
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/magiskboy/wrk"
